# pessi-streamer

./: .gitattributes  .gitignore  Cargo.toml  README.md
bootstraper/: Cargo.toml
bootstraper/config/: neighbours.json
bootstraper/src/: bootstraper.rs  main.rs
bootstrapper/: Cargo.toml
bootstrapper/src/: bootstrapper.rs  main.rs
client/: Cargo.toml
client/src/: client.rs  main.rs  monitor.rs  ui.rs  video.rs
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  neighbours.rs  packet.rs  reliable.rs
node/: Cargo.toml
node/src/: handle.rs  main.rs  node.rs
report/src/: main.typ
server/: Cargo.toml
server/src/: main.rs  server.rs  video.rs
topologies/: final.imn  first.imn  neighbours.toml  neighbours_core.toml  third.imn
