[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.91"
bincode = "2.0.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.5.20", features = ["derive"] }
