[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
common = { path = "../common" }
log = "0.4.22"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
ffmpeg-sidecar = "1.2.0"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
circular-buffer = "0.1.9"
dashmap = "6.1.0"
