[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
common = { path = "../common" }
log = "0.4.22"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
ffmpeg-sidecar = "2.0.2"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
circular-buffer = "0.1.9"
dashmap = "6.1.0"
egui = "0.29.1"
eframe = "0.29.1"
egui_extras = "0.29.1"
bytefmt = "0.1.7"
