[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.92"
tokio = { version = "1.41.0", features = ["full"] }
log = "0.4.22"
bincode = "1.3.3"
dashmap = "6.1.0"
thiserror = "2.0.0"
socket2 = "0.5.7"
aes-gcm = "0.10.3"
