[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.92"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
circular-buffer = "1.1.0"
dashmap = "6.1.0"
